Cheking wrong input in CinemaManage added.